--- a/nyc_tax_rest.ipynb
+++ b/nyc_tax_rest.ipynb
@@ -2080,16 +2080,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Infrastruture & Deployment: I would use a docker container( fun fact: this notebook is dockerized) managed by MLflow to handle the machine learning lifecycle.\n",
-    "* Note: Docker allows to quickly scale and redeploy across services( i.e GCP, AWS, Azure), so we can best utilize budgets\n",
+    "* Infrastruture & Deployment: I would use a docker container( fun fact: this repo is dockerized) managed by MLflow to handle the machine learning lifecycle.\n",
+    "* Note: Docker allows to quickly scale and redeploy across services( i.e GCP, AWS, Azure, Github), so we can best utilize budgets and worry about debugging systems\n",
     "* Data:  from the current datasets, I would look at passenger counts, time of day/meal. Other datasets I would try: types of business at starting point of ride, the average wealth of the areas of starting and endpoint, weather, average nutrionational value by cuisine type, and average item price by cuisine type. Most are avaiable online, but I havent verified that each one exists \n",
     "* Model: As I believe the datasets would not be too large, I would probably use standard machine learning like XGBoost paired with \"explainable machine learning\" so that we truly understand that factors leading to the models prediction"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
