--- a/nyc_tax_rest.ipynb
+++ b/nyc_tax_rest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Enter your API key here\n",
+    "# Enter your API key here to run this section of the notebook\n",
     "GOOG_API_KEY = \"API_KEY\""
    ]
   },
@@ -180,12 +180,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### geocoded restaurant addresses"
+    "### Geocoded Restaurant Addresses\n",
+    "#### START FROM HERE to use preprocessed data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +322,7 @@
        "4         QUEENS           Pakistani  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +477,7 @@
        "4         QUEENS           Pakistani  POINT (314709.586 64972.457)  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,12 +495,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### taxi data preprocessing"
+    "### Taxi Data Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +611,7 @@
        "4         -73.980850         40.786083        0.00  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,15 +623,15 @@
     "    parse_dates=[\"tpep_dropoff_datetime\"],\n",
     "    compression=\"zip\",\n",
     ")\n",
-    "\n",
-    "taxi_df['tpep_dropoff_datetime'] =taxi_df['tpep_dropoff_datetime'].dt.tz_convert('America/New_York') # convert to EST\n",
+    "# convert to EST\n",
+    "taxi_df['tpep_dropoff_datetime'] =taxi_df['tpep_dropoff_datetime'].dt.tz_convert('America/New_York') \n",
     "print(taxi_df.dtypes)\n",
     "taxi_df.head(5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +753,7 @@
        "341         -74.005852         40.750015        2.55  lunch  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +894,7 @@
        "341  POINT (299505.808 64778.512)  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1117,7 @@
        "25969               Asian  21.385366  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,12 +1134,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create An Exploratory Map"
+    "## Create An Exploratory Map\n",
+    "\n",
+    "I used Kepler.GL and set up kepler so that the data shows the path as an arc from the taxi dropoff location to closest restaurant in 50 meter radius"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2162565845dd43799072bf819b3a6ecb",
+       "model_id": "5e7783d92705491c89c0d4d795372f23",
        "version_major": 2,
        "version_minor": 0
       },
