--- a/nyc_taxi_restaurant.ipynb
+++ b/nyc_taxi_restaurant.ipynb
@@ -79,7 +79,7 @@
     "### Geodecoding using the Paid Google Maps API\n",
     "#### You can skip this section if you already have the data\n",
     "\n",
-    "One thing: Since I was using a paid service, I couldnt test this code multiple times. furthernmore, it seems I left certain necessary columns out, so I had to edit the proc data files & change the code after I originally ran to get the geodecoded data.  "
+    "One thing: Since I was using a paid service, I couldnt test this code multiple times. furthernmore, it seems I left certain necessary columns out, so I had to edit the proc data files & change the code after I originally ran to get the geodecoded data.  Output is not being shown"
    ]
   },
   {
