--- a/nyc_taxi_restaurant.ipynb
+++ b/nyc_taxi_restaurant.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,9 +77,10 @@
    "metadata": {},
    "source": [
     "### Geodecoding using the Paid Google Maps API\n",
-    "#### You can skip this section if you already have the data\n",
+    "#### You can skip this section since I have uploaded the preprocessed data to github\n",
     "\n",
-    "One thing: Since I was using a paid service, I couldnt test this code multiple times. furthernmore, it seems I left certain necessary columns out, so I had to edit the proc data files & change the code after I originally ran to get the geodecoded data.  Output is not being shown"
+    "I was using the paid Google API for the geocoding of the addresses, so I couldnt test the code multiple times.\n",
+    "Output for this preprocessing step is not being shown"
    ]
   },
   {
@@ -115,9 +116,9 @@
     ")\n",
     "\n",
     "#function to geocode the address\n",
-    "# I used geopandas to geocode the address, I used the googlev3 provider, you can use any provider you want\n",
+    "# I used geopandas and googlev3 to geocode the address,\n",
     "# I originally plan to use the free geocoder providers, which is why there is random.choice\n",
-    "# but I found that the paid googlev3 provider was the fastest \n",
+    "# but I found that the paid googlev3 provider was the easiest to use\n",
     " \n",
     "def get_lat_lon(addr):\n",
     "    resp = gpd.tools.geocode(\n",
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +324,7 @@
        "4         QUEENS           Pakistani  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +479,7 @@
        "4         QUEENS           Pakistani  POINT (314709.586 64972.457)  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +613,7 @@
        "4         -73.980850         40.786083        0.00  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -754,13 +755,12 @@
        "341         -74.005852         40.750015        2.55  lunch  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# lunchtime is between 11:30am and 2pm\n",
     "taxi_df['meal'] = taxi_df['tpep_dropoff_datetime'].apply(meal_label)\n",
     "\n",
     "#remove other meals\n",
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
        "341  POINT (299505.808 64778.512)  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
        "25969               Asian  21.385366  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,12 +1137,12 @@
    "source": [
     "## Create An Exploratory Map\n",
     "\n",
-    "I used Kepler.GL and set up kepler so that the data shows the path as an arc from the taxi dropoff location to closest restaurant in 50 meter radius"
+    "I used Kepler.GL and set up kepler so that the data shows the path as an arc from the taxi dropoff location to the closest restaurant in a 50 meter radius"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e7783d92705491c89c0d4d795372f23",
+       "model_id": "a34318f744ba439eba530ac98ca8550d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
        "[81 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
        "21          19.60  46.533713  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1699,7 @@
        "9   lunch            Japanese        1057.38   3.511623"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1721,8 @@
    "metadata": {},
    "source": [
     "#### (a) Conclusion\n",
-    "Based on the figures above, American cuisine seems to be the one people travel the board. this is across borough and meal time.  Coffee/tea being second"
+    "Under the assumption that all taxi trip destinations during lunchtime (11:30am - 2pm) and dinnertime (5pm - 9pm) were to restaurants.\n",
+    "American seems to be the cuisine type people travel the most in taxis for. This holds true across borough and meal times, coffee/tea being the second."
    ]
   },
   {
@@ -1734,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1900,7 +1901,7 @@
        "Juice, Smoothies, Fruit Salads                        1.735535"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1914,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1946,7 +1947,7 @@
        "Name: tip_amount, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1960,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1991,7 @@
        "Name: tip_amount, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2049,12 +2050,14 @@
        "Name: tip_amount, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# by number of passengers in the taxi?\n",
+    "\n",
     "comb_df.groupby([\"passenger_count\", \"CUISINE DESCRIPTION\"]).agg(\n",
     "    {\"tip_amount\": \"mean\"}\n",
     ").groupby(\"passenger_count\")[\"tip_amount\"].nlargest(5).reset_index(level=0, drop=True)"
@@ -2066,7 +2069,7 @@
    "metadata": {},
    "source": [
     "#### (b) Conclusion\n",
-    "Based on the figures above, Bottle beverages seems to be cuisine type people on average tip more for. On borough, that queens has a higher than average on tipping for its top 5 average cusisine type. during meal time, people on average tip more than dinner. lastly, there seems to be a trend that as the passenger counts increases the average tipining amount"
+    "Based on the figures above, \"Bottled beverages...\" seems to be cuisine type people on average tip more for. The Queens borough has a higher than average tipping for its top 5 cuisine types. Lunch has a higher average tip than dinner across their top 10 cuisine types. Lastly, as the passenger counts increases the average tipping increases as well"
    ]
   },
   {
@@ -2084,9 +2087,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Infrastruture & Deployment: I would use a docker container( fun fact: this repo is dockerized) managed by MLflow to handle the machine learning lifecycle.\n",
-    "* Note: Docker allows to quickly scale and redeploy across services( i.e GCP, AWS, Azure, Github), so we can best utilize budgets and worry about debugging systems\n",
-    "* Data:  from the current datasets, I would look at passenger counts, time of day/meal. Other datasets I would try: types of business at starting point of ride, the average wealth of the areas of starting and endpoint, weather, average nutrionational value by cuisine type, and average item price by cuisine type. Most are avaiable online, but I havent verified that each one exists \n",
+    "* Infrastructure & Deployment: I would use a docker container( fun fact: this repo is dockerized) managed by MLflow to handle the machine learning lifecycle.\n",
+    "* Note: Docker allows quick scaling and deployment across cloud services( i.e GCP, AWS, Azure, Github), so we can best utilize budgets and worry less about debugging systems\n",
+    "* Data: From the current datasets, I would look at passenger counts and time of day/meal. Other datasets I would try: types of business at starting point of ride, the average wealth of the areas of starting and endpoint, weather, average nutritional value by cuisine type, and average item price by cuisine type. I know most of these datasets are available, but I havent verified each one. \n",
     "* Model: As I believe the datasets would not be too large, I would probably use standard machine learning like XGBoost paired with \"explainable machine learning\" so that we truly understand that factors leading to the models prediction"
    ]
   }
