--- a/nyc_taxi_restaurant.ipynb
+++ b/nyc_taxi_restaurant.ipynb
@@ -1721,8 +1721,8 @@
    "metadata": {},
    "source": [
     "#### (a) Conclusion\n",
-    "Under the assumption that all taxi trip destinations during lunchtime (11:30am - 2pm) and dinnertime (5pm - 9pm) were to restaurants.\n",
-    "American seems to be the cuisine type people travel the most in taxis for. This holds true across borough and meal times, coffee/tea being the second."
+    "Based on the assumption that all taxi trips between lunchtime (11:30am - 2pm) and dinnertime (5pm - 9pm) were made to restaurants, \n",
+    "it appears that American cuisine is the most popular type of food people travel for in taxis. This holds true across boroughs and meal times, coffee/tea being the second."
    ]
   },
   {
@@ -2069,7 +2069,7 @@
    "metadata": {},
    "source": [
     "#### (b) Conclusion\n",
-    "Based on the figures above, \"Bottled beverages...\" seems to be cuisine type people on average tip more for. The Queens borough has a higher than average tipping for its top 5 cuisine types. Lunch has a higher average tip than dinner across their top 10 cuisine types. Lastly, as the passenger counts increases the average tipping increases as well"
+    "Based on the data, it appears that people tend to tip more for \"Bottled beverages...\" as compared to other cuisine types. The borough of Queens has a higher average tipping rate for its top 5 cuisine types than the other boroughs. Additionally, on average, people tend to tip more for lunch than for dinner across their top 10 cuisine types. Lastly, there seems to be a positive correlation between the number of passengers and the average tipping rate, with larger groups tending to tip more."
    ]
   },
   {
@@ -2087,11 +2087,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Infrastructure & Deployment: I would use a docker container( fun fact: this repo is dockerized) managed by MLflow to handle the machine learning lifecycle.\n",
-    "* Note: Docker allows quick scaling and deployment across cloud services( i.e GCP, AWS, Azure, Github), so we can best utilize budgets and worry less about debugging systems\n",
-    "* Data: From the current datasets, I would look at passenger counts and time of day/meal. Other datasets I would try: types of business at starting point of ride, the average wealth of the areas of starting and endpoint, weather, average nutritional value by cuisine type, and average item price by cuisine type. I know most of these datasets are available, but I havent verified each one. \n",
-    "* Model: As I believe the datasets would not be too large, I would probably use standard machine learning like XGBoost paired with \"explainable machine learning\" so that we truly understand that factors leading to the models prediction"
+    "* Infrastructure & Deployment: I strongly recommend using a Docker container to facilitate seamless and efficient scaling and deployment across multiple cloud services such as GCP, AWS, Azure, and GitHub. It's worth noting that this repository is already Dockerized, making it easier to set up the necessary environment. Additionally, we can use MLflow to streamline the machine learning lifecycle and ensure better version control. By adopting these tools, we can optimize our budget, reduce the chances of making mistakes, and minimize the time spent on debugging environment setups.\n",
+    "* Data: We can start by analyzing passenger counts and time of day/meal using the current datasets. Additionally, we could explore other datasets such as the types of businesses at the starting point of the ride, the average income for the starting and endpoint of the ride, weather data, the average nutritional value by cuisine type in the area, and the average item price by cuisine type in the area. While some of these datasets are readily available, others may require verification.\n",
+    "* Model:  As the datasets are not expected to be too large, we can use standard machine learning techniques like XGBoost. To ensure transparency and interpretability, we can use explainable machine learning methods that help us understand the factors leading to the model's predictions."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
