--- a/nyc_taxi_restaurant.ipynb
+++ b/nyc_taxi_restaurant.ipynb
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a34318f744ba439eba530ac98ca8550d",
+       "model_id": "22a7b70dd15e4031bb1d11ccfad12877",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1168,10 +1168,29 @@
     }
    ],
    "source": [
+    "comb_df['tpep_dropoff_datetime'] = comb_df['tpep_dropoff_datetime'].astype(str)\n",
     "df_map = kp.KeplerGl(height=850, width=650)\n",
     "df_map.add_data(data=comb_df, name=\"NYC Taxi Restaurant Inspections\")\n",
     "df_map.config = json.load(open(\"data/settings/kepler_config.json\", \"r\"))\n",
     "df_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Map saved to kepler_map.html!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#save the map to html file so you can view without running the notebook its called kepler_map.html\n",
+    "df_map.save_to_html(file_name=\"kepler_map.html\")"
    ]
   },
   {
