--- a/nyc_taxi_restaurant.ipynb
+++ b/nyc_taxi_restaurant.ipynb
@@ -1137,7 +1137,8 @@
    "source": [
     "## Create An Exploratory Map\n",
     "\n",
-    "I used Kepler.GL and set up kepler so that the data shows the path as an arc from the taxi dropoff location to the closest restaurant in a 50 meter radius"
+    "I used Kepler.GL and set up kepler so that the data shows the path as an arc from the taxi dropoff location to the closest restaurant in a 50 meter radius\n",
+    "I added the kepler_map.html file so you can view the map without having to run the notebook"
    ]
   },
   {
