commented out the map save

--- a/nyc_taxi_restaurant.ipynb
+++ b/nyc_taxi_restaurant.ipynb
@@ -1191,7 +1191,7 @@
    ],
    "source": [
     "#save the map to html file so you can view without running the notebook its called kepler_map.html\n",
-    "df_map.save_to_html(file_name=\"kepler_map.html\")"
+    "# df_map.save_to_html(file_name=\"kepler_map.html\")"
    ]
   },
   {
